--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Metadata
 title: "Melody Starling!"
-description: "I’m an interactive web developer, designer, and storyteller. Here's something cool I made!"
+description: "I’m an interactive web developer, designer, and storyteller. Here's something interesting I worked on!"
 keywords: ["web developer", "designer", "jekyll"]
 domain: "https://melody.cool"
 
