oppsie woopsie wrong domain

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: "Melody Starling!"
 description: "I’m an interactive web developer, designer, and storyteller. Here's something interesting I worked on!"
 keywords: ["web developer", "designer", "jekyll"]
-domain: "https://melody.cool"
+domain: "https://melody.dev"
 
 # Third party services
 # (Anything you put here will be public!)
