--- a/_data/events.yaml
+++ b/_data/events.yaml
@@ -28,6 +28,18 @@
   link: https://brooklynjs.org/
   topic: lofi hip hop beats to npm install to!
   accent: orange
+- title: steel furnace party
+  city: Vacant Lot by 27th and Girard
+  role: do attend
+  date: 2019-04-27
+  link: https://www.reddit.com/r/philadelphia/comments/arb9zo/wtf_found_this_in_my_door_this_morning
+  accent: red
+- title: Splatboro
+  city: Hatboro PA
+  role: splatting
+  date: 2019-04-27
+  link: https://smash.gg/tournament/switch-versus-the-lab-17/details
+  accent: teal
 - title: "!!Con"
   city: Manhattan
   role: speaking
