--- a/_data/events.yaml
+++ b/_data/events.yaml
@@ -28,18 +28,12 @@
   link: https://brooklynjs.org/
   topic: lofi hip hop beats to npm install to!
   accent: orange
-- title: steel furnace party
+- title: Furnace Party
   city: Vacant Lot by 27th and Girard
   role: do attend
   date: 2019-04-27
   link: https://www.reddit.com/r/philadelphia/comments/arb9zo/wtf_found_this_in_my_door_this_morning
   accent: red
-- title: Splatboro
-  city: Hatboro PA
-  role: splatting
-  date: 2019-04-27
-  link: https://smash.gg/tournament/switch-versus-the-lab-17/details
-  accent: teal
 - title: "!!Con"
   city: Manhattan
   role: speaking
@@ -48,14 +42,27 @@
   link: http://bangbangcon.com/
   topic: lofi hip hop beats to npm install to!!
   accent: purple
+- title: Chilling in Canada
+  city: Vancouver BC
+  role: say hi to me
+  date: 2019-05-13
+  end: 2019-05-16
+  link: https://twitter.com/pixelysquid
+  accent: red
 - title: Everfree Northwest
   city: Seattle
   role: speaking
   date: 2019-05-17
   end: 2019-05-19
   link: https://everfreenw.com/
-  topic: An Absurd Intro to React Hooks (pony edition)
   accent: teal
+- title: Chilling in Seattle
+  city: Seattle
+  role: "let's meet up!"
+  date: 2019-05-20
+  end: 2019-05-21
+  link: https://twitter.com/pixelysquid
+  accent: orange
 - title: CodeDay Virginia
   city: Richmond VA
   role: mentoring
@@ -64,6 +71,13 @@
   link: https://codeday.org/virginia/
   topic: Intro to Coding ~ Build Your First Game
   accent: red
+- title: "Smash 'N' Splash"
+  city: Wisconsin Dells WI
+  role: spectating
+  date: 2019-05-31
+  end: 2019-06-02
+  link: https://smash.gg/tournament/smash-n-splash-4/details
+  accent: blue
 - title: BronyCon
   city: Baltimore
   role: speaking
