--- a/_data/events.yaml
+++ b/_data/events.yaml
@@ -82,3 +82,11 @@
   link: https://transittechies.nyc/
   topic:
   accent: purple
+- title: Strangeloop
+  city: St. Louis
+  role: attending
+  date: 2019-09-11
+  end: 2019-09-15
+  link: https://www.thestrangeloop.com
+  topic:
+  accent: green
